--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-cloud-storage>=3.9.0",
     "ipykernel>=7.1.0",
     "jupyterlab>=4.5.2",
     "pandas>=3.0.0",
